# CG-FinalProjectTesting

./: .gitignore  CMakeLists.txt  FinalProject.sln  README.md
FinalProject/: FinalProject.vcxproj  FinalProject.vcxproj.filters
FinalProject/Libraries/include/glad/: glad.h
FinalProject/Libraries/lib/: glfw3.lib
FinalProject/Models/: rockModel.mtl
FinalProject/src/: Camera.cpp  Camera.h  Lantern.cpp  Lantern.h  Main.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  MovingBody.cpp  MovingBody.h  PickUps.cpp  PickUps.h  PlayerChar.cpp  PlayerChar.h  Shader.cpp  Shader.h  Window.cpp  Window.h  glad.c
FinalProject/src/Shaders/: default.frag  default.vert
MineRush/: CMakeLists.txt  Camera.cpp  Camera.h  Collider.cpp  Collider.h  EBO.cpp  EBO.h  Lantern.cpp  Lantern.h  Main.cpp  Maze.cpp  Maze.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  MovingBody.cpp  MovingBody.h  PickUps.cpp  PickUps.h  PlayerChar.cpp  PlayerChar.h  Shader.cpp  Shader.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  Window.cpp  Window.h
MineRush/Models/: Syrianv2.mtl  battery1.mtl  battery3.mtl  battery4.mtl  battery5.mtl  battery6.mtl  battery7.mtl  chao.mtl  char_direita.mtl  lanterna.mtl  maze.mtl  maze2.mtl  maze_new.mtl  maze_sem_chao.mtl  new_lanterna.mtl  ouro1.mtl  ouro2.mtl  ouro3.mtl  ouro4.mtl  ouro5.mtl  parede.mtl  parede_chao.mtl  pedras_parede.mtl  pilha.mtl  pilha2.mtl  pilha3.mtl  pilha4.mtl  pilha5.mtl  pilha6.mtl  urso.mtl
MineRush/Shaders/: debugCollisions.frag  default.frag  player.frag
